Adding extend docs
Former-commit-id: 89769eddfb37e607bb13ea867544b82dfd302677

--- a/lib/jade/docs/3.x/_header.jade
+++ b/lib/jade/docs/3.x/_header.jade
@@ -2,61 +2,39 @@
   .container
     nav
       ul
-        li
-          a(href="/docs/3.x") Quickstart
-        li
-          a(href="/docs/3.x/theming/") Theming
-        li
-          a(href="/docs/3.x/grid/") Grid
-        li
+        li: a(href="/docs/3.x") Quickstart
+        li: a(href="/docs/3.x/theming/") Theming
+        li: a(href="/docs/3.x/grid/") Grid
+        li 
           | UI
           ul
-            li
-              a(href="/docs/3.x/ui/") Base styles
-            li
-              a(href="/docs/3.x/ui/buttons") Buttons
-            li
-              a(href="/docs/3.x/ui/forms") Forms
-            li
-              a(href="/docs/3.x/ui/icons") Icons
-            li
-              a(href="/docs/3.x/ui/images") Images
-            li
-              a(href="/docs/3.x/ui/labels") Labels
-            li
-              a(href="/docs/3.x/ui/modals") Modals
-            li
-              a(href="/docs/3.x/ui/navigation") Navigation
-            li
-              a(href="/docs/3.x/ui/notifications") Notifications
-            li
-              a(href="/docs/3.x/ui/tables") Tables
-            li
-              a(href="/docs/3.x/ui/tabs") Tabs
-            li
-              a(href="/docs/3.x/ui/tiles") Tiles
-            li
-              a(href="/docs/3.x/ui/tooltips") Tooltips
-            li
-              a(href="/docs/3.x/ui/typography") Typography
+            li: a(href="/docs/3.x/ui/") Base styles
+            li: a(href="/docs/3.x/ui/buttons") Buttons
+            li: a(href="/docs/3.x/ui/forms") Forms
+            li: a(href="/docs/3.x/ui/icons") Icons
+            li: a(href="/docs/3.x/ui/images") Images
+            li: a(href="/docs/3.x/ui/labels") Labels
+            li: a(href="/docs/3.x/ui/modals") Modals
+            li: a(href="/docs/3.x/ui/navigation") Navigation
+            li: a(href="/docs/3.x/ui/notifications") Notifications
+            li: a(href="/docs/3.x/ui/tables") Tables
+            li: a(href="/docs/3.x/ui/tabs") Tabs
+            li: a(href="/docs/3.x/ui/tiles") Tiles
+            li: a(href="/docs/3.x/ui/tooltips") Tooltips
+            li: a(href="/docs/3.x/ui/typography") Typography
         li
           | Functions
           ul
-            li
-              a(href="/docs/3.x/functions/throttling") Throttling
-        li
-          a(href="/docs/3.x/philosophy/") Philosophy
+            li: a(href="/docs/3.x/functions/throttling") Throttling
+            li: a(href="/docs/3.x/functions/extend") Extend
+        li: a(href="/docs/3.x/philosophy/") Philosophy
 
       ul
         li #{currentVersion}
-        li 
+        li
           | Other versions
           ul
-            li
-              a(href="/docs/1.x") 1.5.0
-            li
-              a(href="/docs/2.x") 2.0.8
-            li
-              a(href="/docs/3.x") #{currentVersion} (current)
-            li
-              a(href="/docs/4.x") 4 (Future plans)
+            li: a(href="/docs/1.x") 1.5.0
+            li: a(href="/docs/2.x") 2.0.8
+            li: a(href="/docs/3.x") #{currentVersion} (current)
+            li: a(href="/docs/4.x") 4 (Future plans)
