Barely changing anything and breaking gulp
Former-commit-id: 2120b72e08ab9294cc030bf03388c78bf77104b8

--- a/lib/jade/docs/3.x/functions/extend/index.jade
+++ b/lib/jade/docs/3.x/functions/extend/index.jade
@@ -4,4 +4,4 @@ block hero-title
   h1 Extend
 
 block basic
-  `k$.extend()` merges two JavaScript objects.
+  // `k$.extend()` merges two JavaScript objects.
