--- a/lib/jade/docs/1.x/index.jade
+++ b/lib/jade/docs/1.x/index.jade
@@ -4,5 +4,6 @@ block mainpane
   header.page-heading
     :markdown
       ## Documentation
-      For 1.x Kickstrap documentation, please visit the [archive](http://getkickstrap.com/1.x/)
+  
+      [1.x Documentation](http://getkickstrap.com.s3-website-us-east-1.amazonaws.com/1.x/)
 
