Linking to old docs
Former-commit-id: 5c8b9016a4dc8004c5a19f80bc295b7c4ee8260c

--- a/lib/jade/docs/2.x/index.jade
+++ b/lib/jade/docs/2.x/index.jade
@@ -4,5 +4,6 @@ block mainpane
   header.page-heading
     :markdown
       ## Documentation
-      For 2.x Kickstrap documentation, please visit the [archive](http://getkickstrap.com/1.x/)
+
+      [2.x Documentation](http://getkickstrap.com.s3-website-us-east-1.amazonaws.com/2.x/)
 
