--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -7,6 +7,7 @@
   text-decoration: none
   border-color: hsla(0, 0%, 0%, 0.15)
   color: $light-black
+  text-align: center
 
   @if lightness($color) > 75%
     color: $lighter-black
