--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -68,6 +68,15 @@
   &yellow
     background-color: $yellow
 
+.col-example
+  padding: $space/2
+  background: white
+  margin: $space/2 0
+  text-align: center
+
+  .gray
+    background: $dark-white
+
 .example
   padding: $space
   margin-bottom: $space
