--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -68,7 +68,7 @@
   &yellow
     background-color: $yellow
 
-.example
+.example, .col-example
   padding: $space
   margin-bottom: $space
   background: $dark-white
