--- a/lib/jade/docs/3.x/grid/index.jade
+++ b/lib/jade/docs/3.x/grid/index.jade
@@ -21,14 +21,16 @@ block basic
   .example
     .row
       .col-third
-        p I'm 4 columns on desktop monitors...
-        p 6 columns on tablets...
-        p and 12 (full) columns on mobile.
+        .col-example
+          p I'm 4 columns on desktop monitors...
+          p 6 columns on tablets...
+          p and 12 (full) columns on mobile.
 
       .col-twothirds
-        p I'm eight columns on desktop monitors...
-        p 6 columns on tablets
-        p and 12 (full) columns on mobile.
+        .col-example
+          p I'm eight columns on desktop monitors...
+          p 6 columns on tablets
+          p and 12 (full) columns on mobile.
 
   .ifnot-semantic
     :markdown
@@ -161,11 +163,116 @@ block basic
             ...
           </div>
 
-  :markdown
-    ## Offsets
-
-
 block variations
+  h2 Offsets
+  
+  .example
+    .row
+      .col-offset-6.col-6: .col-example six columns with offset
+
+  .ifnot-semantic
+    :markdown
+      <span>
+
+          ...
+          <div class="col-offset-6 col-6">
+            Six columns
+          </div>
+
+  .if-semantic
+    :markdown
+      <span>
+
+          ...
+          <div class="reminder">
+            Six columns
+          </div>
+
+          .reminder {
+            @include column(6, 6);
+          }
+
+  h2 Nesting
+
+  .example
+    .row
+      .col-6
+        .col-example
+          | half
+          .row
+            .col-6: .col-example.gray half
+            .col-6: .col-example.gray half
+      .col-6
+        .col-example
+          | half
+          .row
+            .col-4: .col-example.gray third
+            .col-4: .col-example.gray third
+            .col-4: .col-example.gray third
+
+  p When nesting, be sure to include a new row in the parent column.
+
+  .if-semantic
+    :markdown
+      <span>
+
+          <div class="row">
+            <div class="sidebar">
+              half
+              <div class="options">
+                <div class="terms">
+                  half
+                </div>
+                <div class="definitions">
+                  half
+                </div>
+              </div>
+            </div>
+            <div class="main">
+              <div class="menu">
+                <div class="new">third</div>
+                <div class="updated">third</div>
+                <div class="archived">third</div>
+              </div>
+            </div>
+          </div>
+
+          .row, .menu, .options {
+            @import row();
+          }
+          .sidebar, .main, .terms, .definitions {
+            @import column(6);
+          }
+          .new, .updated, .archived {
+            @import columns(4);
+          } 
+
+  .ifnot-semantic
+    :markdown
+      <span>
+
+          <div class="row">
+            <div class="col-6">
+              half
+              <div class="row">
+                <div class="col-6">
+                  half
+                </div>
+                <div class="col-6">
+                  half
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="row">
+                <div class="col-4">third</div>
+                <div class="col-4">third</div>
+                <div class="col-4">third</div>
+              </div>
+            </div>
+          </div>
+
+
   h2#responsive Responsive
 
   .ifnot-semantic
