--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -68,7 +68,16 @@
   &yellow
     background-color: $yellow
 
-.example, .col-example
+.col-example
+  padding: $space/2
+  background: white
+  margin: $space/2 0
+  text-align: center
+
+  .gray
+    background: $dark-white
+
+.example
   padding: $space
   margin-bottom: $space
   background: $dark-white
