--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -144,6 +144,16 @@ iframe
   background-color: $darkest-white
   color: white
 
+// Modal
+
+.modal.example
+  display: block
+  position: static
+  box-shadow: none
+  margin: 0px auto
+  left: auto
+  top: auto
+
 // Root Element
 .root-element
   +root-element
