--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -144,6 +144,17 @@ iframe
   background-color: $darkest-white
   color: white
 
+// Modal
+
+.modal.example
+  display: block
+  position: static
+  box-shadow: none
+  margin: 0px auto
+  left: auto
+  top: auto
+  box-shadow: 0px 0px 5px #AAA
+
 // Root Element
 .root-element
   +root-element
