Not sure what else to write.
Former-commit-id: 730c1bb9489bb39e233a1c8a6773210df9700df8

--- a/lib/jade/docs/3.x/ui/tabs/index.jade
+++ b/lib/jade/docs/3.x/ui/tabs/index.jade
@@ -1,5 +1,8 @@
 extends ../../layout
 
+block docVars
+  - var variations = false
+
 block hero-title
   h1 Tabs
 
@@ -38,7 +41,7 @@ block basic
   :markdown
     <span>
 
-        <ul class="tabs">
+        <ul class="tabs" id="animals">
           <li>
             <a href="#land">Land</a>
           </li>
@@ -60,9 +63,13 @@ block basic
           Fish
         </article>
 
+    You'll also need to tell `k$.tabs()` the selector of the ul that will become the tab bar.
+
+        k$.tabs('animals');
+
   .if-semantic
     :markdown
-      <span>
+      Tab styling can be applied via the `tabs()` mixin.
           
           .tabs {
             @include tabs();
