--- a/lib/jade/docs/3.x/_header.jade
+++ b/lib/jade/docs/3.x/_header.jade
@@ -30,9 +30,8 @@
         li: a(href="/docs/3.x/philosophy/") Philosophy
 
       ul
-        li #{currentVersion}
         li
-          | Other versions
+          | #{currentVersion}
           ul
             li: a(href="http://getkickstrap.com.s3-website-us-east-1.amazonaws.com/1.x/") 1.5.0
             li: a(href="http://getkickstrap.com.s3-website-us-east-1.amazonaws.com/2.x/") 2.0.8
