--- a/lib/jade/docs/3.x/ui/typography/index.jade
+++ b/lib/jade/docs/3.x/ui/typography/index.jade
@@ -129,3 +129,19 @@ block variations
               code &lt;h1 class="#{size}"&gt;Hello World&lt;/h1&gt;
           td
             h1(class="#{size}") Hello World
+
+  :markdown
+    ## Heros
+
+    Heros are large containers for showcasing content. Headings are automatically bumped up
+    a notch and elements tend to be centered.
+
+  .hero
+    h1 Thanks for visiting.
+
+    .thumbnail-content(style="width: 80%")
+      img(src="/img/mountains.png" style="width: 150px;height: 150px;")
+      article
+        h6 Don't to forget to check out the slopes
+        p You won't regret it.
+
