--- a/lib/sass/components/_typography.sass
+++ b/lib/sass/components/_typography.sass
@@ -55,10 +55,15 @@ a
     top: 10vw
     bottom: $space * 3
     bottom: 10vw
-  text-align: center
   background: $primary-color
   margin-bottom: $space
   box-shadow: inset 0px -30px 100px -20px hsla(0, 0%, 0%, 0.15), inset 0px 40px 90px -20px rgba(255, 255, 255, 0.15)
+  display: flex
+  flex-direction: column
+  align-items: center
+
+  > h1, > h2, > h3, > h4, > h5, > h6, > p
+    text-align: center
 
   img
     margin: 0px auto
