--- a/rails/app/assets/stylesheets/kickstart_rails/components/_images.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_images.sass
@@ -4,6 +4,10 @@
   margin-bottom: $space
   align-items: flex-start
 
+  img
+    flex-grow: 0
+    flex-shrink: 0
+
   > :not(img)
     + img
       margin-left: $space/2
