--- a/lib/sass/components/_typography.sass
+++ b/lib/sass/components/_typography.sass
@@ -51,15 +51,18 @@ a
 
 =hero-default
   padding:
-    top: $space * 3
-    top: 10vw
-    bottom: $space * 3
-    bottom: 10vw
+    top: $space
+    top: 2vw
+    bottom: $space
+    bottom: 2vw
+  min-height: 450px
+  min-height: 35vw
   background: $primary-color
   margin-bottom: $space
   box-shadow: inset 0px -30px 100px -20px hsla(0, 0%, 0%, 0.15), inset 0px 40px 90px -20px rgba(255, 255, 255, 0.15)
   display: flex
   flex-direction: column
+  justify-content: center
   align-items: center
 
   > h1, > h2, > h3, > h4, > h5, > h6, > p
