--- a/lib/jade/docs/3.x/_header.jade
+++ b/lib/jade/docs/3.x/_header.jade
@@ -8,7 +8,7 @@
         li 
           | UI
           ul
-            li: a(href="/docs/3.x/ui/") Base styles
+            li: a(href="/docs/3.x/ui/") Layout
             li: a(href="/docs/3.x/ui/buttons") Buttons
             li: a(href="/docs/3.x/ui/forms") Forms
             li: a(href="/docs/3.x/ui/icons") Icons
