fixing root element
Former-commit-id: 1344cc0631e86f958bffb986e6db6d380af94f18

--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -1,5 +1,8 @@
 =button-default($color)
   +root-element
+  padding:
+    left: map-get($rootElement, paddingH)
+    right: map-get($rootElement, paddingH)
   display: inline-block
   background-color: $color
   color: $light-black
