--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -94,6 +94,9 @@ $default-line-height: 1.4rem
 =thumbnail-content
   +thumbnail-content-default
 
+=thumbnail
+  +thumbnail-default
+
 // MODALS
 // ------
 
