--- a/rails/app/assets/stylesheets/kickstart_rails/components/_images.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_images.sass
@@ -15,3 +15,10 @@
   > img
     + :not(img)
       margin-left: $space/2
+
+=thumbnail-default
+  +root-element
+
+figure
+  margin: 0
+  padding: 0
