--- a/rails/app/assets/stylesheets/kickstart_rails/components/_root-element.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_root-element.sass
@@ -6,7 +6,7 @@
  */
 
 =root-element
-  padding: map-get($rootElement, paddingV) map-get($rootElement, paddingH)
+  padding: map-get($rootElement, paddingV) map-get($rootElement, paddingV)
   +border-radius(3px)
   border: 1px solid transparent
   outline: none
