--- a/rails/app/assets/stylesheets/kickstart_rails/docs.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/docs.sass
@@ -134,9 +134,14 @@ h1.example-
   max-width: 600px
 
 // Iframes
-iframe
+iframe.animation
   max-width: 500px
   height: 200px
+  display: block
+  margin:
+    left: auto
+    right: auto
+    bottom: $space
 
 // Grid
 
