--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -95,7 +95,7 @@ $default-line-height: 1.4rem
   +thumbnail-content-default
 
 =thumbnail
-  +thumbnail-dfault
+  +thumbnail-default
 
 // MODALS
 // ------
